# doctor-who-ir-system-final

./: .gitignore  README.md  app.py  compare_methods.py  config.py  doctor_who_kg.graphml  doctor_who_kg.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dw_data/: bm25_param_tuning.csv  bm25_testing.csv  doctor_who.db  faiss.index  faiss_mapping.json  inverted_index.json  kg_search_results_summary.csv  kg_search_summary.json  knowledge_graph.json  merged_dataset.csv  method_ranking.csv  search_results_summary.csv  second_example_20_queries.json
evaluations_testings/: compare_methods.py  tests.py
graph_depo/: doctor_who_kg.graphml  doctor_who_kg.html  doctor_who_kg_claude.graphml  doctor_who_kg_claude.html
outputs/: bm25_param_tuning.csv  document_corpus_dw.json  inverted_index.json  method_ranking.csv  search_results_summary.csv
src/: bm_25.py  boolean_search.py  creating_corpus.py  evaluation.py  faiss_search.py  fused_search.py  kg_exp.py  kg_exp_chatgpt.py  knowledge_graph.py  preprocessing.py  rag.py  semantic_search.py
src/kg_builders/: kg_exp.py  kg_exp_chatgpt.py  kg_exp_claude.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_engine.py
